public/app/routes/home/home.sass
$faster: 'Faster One', cursive
$cinzel: 'Cinzel', serif
$playfair: 'Playfair Display', serif
$julius: 'Julius Sans One', sans-serif
$syncopate: 'Syncopate', sans-serif
$josefinSans: 'Josefin Sans', sans-serif
$raleway: 'Raleway', sans-serif
$bg-gradient: linear-gradient(rgb(0,0,0) 0%, rgba(0,0,0,0.3) 50%, rgb(0,0,0) 100%)

#home-container
  color: rgb(150,150,150)
  font-family: $julius

  p
    padding: 40px
    text-align: center

  .link-bar
    width: 100vw
    height: 100vh
    display: flex
    flex-direction: column
    justify-content: center
    align-items: center

  .headline
    text-align: center
    font-size: 120px

  #youtube-div
    .headline
      font-family: $raleway
      font-weight: 400

    #YouTube_Icon
      z-index: -10
      opacity: 0.1
      position: absolute
      width: inherit
      max-width: 60%
      height: inherit
      transition: opacity 1.5s

  #youtube-div:hover #YouTube_Icon
    opacity: 0.35

  #cardiac-div
    background: $bg-gradient
    position: relative
    .headline
      color: rgb(150,150,150)
      font-family: $josefinSans
      // font-size: 120px
      text-shadow: 0 0 15px rgb(150,150,150)

  #cardiac-canvas
    position: absolute
    top: 0
    background: rgb(89,10,22)
    z-index: -5

  #space-div

    .headline
      color: orange
      text-shadow: -5px 5px #610e0e
      font-family: $faster

  #golden-ratio-div
    background: $bg-gradient
    .headline
      color: rgb(255, 202, 0)
      text-shadow: -2px 2px #4e4411
      font-family: $cinzel
    .top
      z-index: 1

  #golden-ratio-div #gr-svg-bg
    stroke: #333
    opacity: 0
    position: absolute
    width: inherit
    max-width: 100%
    height: inherit
    transition: opacity 1.5s

  #golden-ratio-div:hover #gr-svg-bg
    opacity: 0.7

  $baloo: 'Baloo Bhaina', cursive

  #weather-app-div
    .headline
      font-family: $baloo
      color: skyblue

  .top, .bottom
    width: 100%
    height: 50%
    display: flex
    flex-direction: column
    justify-content: center
    align-items: center

  .top
    justify-content: flex-end

  @media (max-width: 750px)
    .headline
      font-size: 68px

  @media (max-width: 400px)
    .headline
      font-size: 48px

